--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,24 @@ httpcore==0.3.0
 httptools==0.0.13
 hyperframe==5.2.0
 idna==2.8
+isodate==0.6.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 multidict==4.5.2
 PyGithub==1.43.8
 PyJWT==1.7.1
 PyLD==1.0.5
+pyparsing==2.4.2
+rdflib==4.2.2
+rdflib-jsonld==0.4.0
 requests==2.22.0
 requests-async==0.5.0
 rfc3986==1.3.2
 sanic==19.6.3
 Sanic-Cors==0.9.9.post1
+sanic-jinja2==0.7.5
 Sanic-Plugins-Framework==0.8.2
+six==1.12.0
 ujson==1.35
 urllib3==1.25.3
 uvloop==0.12.2
